syntax = "proto3";

package pinger;
option go_package = "fastad/pkg/proto/pinger";

message PingRequest {}

message PingResponse {}
