syntax = "proto3";

package pinger;
option go_package = "github.com/c4t-but-s4d/fastad/pkg/proto/pinger";

import "pinger/pinger.proto";

service PingerService {
    rpc Ping(PingRequest) returns (PingResponse);
}